# tianracer_ros2_ws

./: .gitignore  .gitmodules  LICENSE  README.md  compile.sh  init_submodules.sh  install_udev.sh  launch_all.launch.py  my_map.pgm  my_map.yaml  rm.sh  source.sh  sync_workspace.sh  tianracer_ros2_ws.repos
backup/: init_submodules.sh  lab  plot_odom_and_yaw.py  test_yaw_accuracy.py  tianracer_ros2_ws_http.repos  tianracer_ros2_ws_ssh.repos
boot/: bringup.sh  cmdvel2ackermann.sh  diagnose_ros2_comm.sh  gazebo.sh  gmapping.sh  nav2.sh  nav2sim.sh  nomoregazebo.sh  osight_lidar.sh  savemap.sh  setip.sh  sync_time.sh  tianbot_core.sh
config/: fastdds.xml  fastdds.xml.bak  fastdds_host.xml  fastdds_robot.xml  lab.rviz
docs/: GUIDE.md  NAV2_ERRORS_AND_SOLUTIONS.md  README_SUBMODULES.md  URDF_CONCEPTS.md  ackermann_shuttle_math.md  gazebo_wheel_spinning_issue.md  nav2_config_notes.md  nav2_gpu_acceleration_guide.md  nav2_params_physical_effects.md  nav2_real_robot_debugging.md  shuttle_to_orientation_plugin.md
full/: full.blend  full.blend1
map/: my_map.pgm  my_map.yaml
maps/: .$lab.drawio.bkp  full_map.pgm  full_map.stl  full_map.yaml  lab.drawio  my_map.pgm  my_map.stl  my_map.yaml  my_map_20260122_173141.pbstream  my_map_20260122_173141.pgm  my_map_20260122_173141.yaml  newfull_map.pgm  newfull_map.xcf  newfull_map.yaml
models/labanything/: model.config  model.sdf
models/labdoor/: model.config  model.sdf
models/labseat/: model.config  model.sdf
models/labtab/: model.config  model.sdf
models/labwall/: model.config  model.sdf
src/scan_filter/: CMakeLists.txt  package.xml
src/scan_filter/config/: filter_params.yaml
src/scan_filter/launch/: scan_filter.launch.py
src/scan_filter/scan_filter/: __init__.py  dynamic_obstacle_filter.py
src/tianbot_description_ros2/: CMakeLists.txt  README.md  package.xml
src/tianbot_description_ros2/launch/: description.launch.py  gazebo.launch.py  gazebo_robot.launch.py
src/tianbot_description_ros2/launch/includes/: tianbot_ackermann.launch.py
src/tianbot_description_ros2/urdf/: qingzhou_gazebo_core.xacro  tianbot_ackermann.urdf.xacro  tianracer.xacro  tianracer_base.xacro  tianracer_gazebo_core.xacro
src/tianracer_bringup_ros2/: CMakeLists.txt  README.md  package.xml
src/tianracer_bringup_ros2/launch/: tianracer_bringup.launch.py
src/tianracer_navigation_ros2/: CMakeLists.txt  README.md  package.xml  robot_factory.launch.py
src/tianracer_navigation_ros2/behavior_trees/: ackermann_nav.xml.bak  ackermann_nav_shuttle.xml  ackermann_nav_through_poses.xml
src/tianracer_navigation_ros2/config/: nav2_params.yaml  nav2_params_real.yaml  nav2_params_real.yaml.bak  nav2_params_real.yaml.dwb_backup  nav2_params_real.yaml.smac_backup  nav2_params_sim.yaml  nav2_params_sim_backup.yaml
src/tianracer_navigation_ros2/docs/: CONFIGURATION.md  QUICK_START.md  nav2_algorithms_guide.md
src/tianracer_navigation_ros2/include/tianracer_navigation_ros2/plugins/action/: shuttle_to_orientation_action.hpp
src/tianracer_navigation_ros2/include/tianracer_navigation_ros2/plugins/condition/: is_goal_in_front_condition.hpp
src/tianracer_navigation_ros2/launch/: navigation.launch.py  navigation_sim.launch.py
src/tianracer_navigation_ros2/src/plugins/action/: shuttle_to_orientation_action.cpp
src/tianracer_navigation_ros2/src/plugins/condition/: is_goal_in_front_condition.cpp
src/tianracer_slam_ros2/: CMakeLists.txt  README.md  package.xml
src/tianracer_slam_ros2/docs/: MAP_NAVIGATION_GUIDE.md  RVIZ2_TROUBLESHOOTING.md  SLAM_COMPARISON.md
src/tianracer_slam_ros2/launch/: map_load.launch.py  map_load_rviz.launch.py  map_save.launch.py  map_save_cartographer.launch.py  map_save_cli.launch.py  map_save_rtabmap.launch.py  nav2_navigation.launch.py  static_tf.launch.py  tianracer_3d_cartographer.launch.py  tianracer_cartographer.launch.py  tianracer_gmapping.launch.py  tianracer_hector.launch.py  tianracer_rtabmap.launch.py
src/tianracer_slam_ros2/launch/includes/: default_mapping.launch.py
src/tianracer_slam_ros2/maps/: my_map.pgm
src/tianracer_slam_ros2/param/: 2d_scan.lua
src/tianracer_teleop_ros2/: CMakeLists.txt  package.xml
src/tianracer_teleop_ros2/launch/: cmd_vel_to_ackermann.launch.py  joystick_teleop.launch.py
src/tianracer_teleop_ros2/script/: cmd_vel_to_ackermann.py  tianracer_joy.py
tf/: frames_2026-01-20_14.18.44.gv  frames_2026-01-20_15.04.09.gv  frames_2026-01-22_17.45.05.gv
world/: lab  lab.blend  lab.blend1  lab.old  lab.old.backup  lab.sdf  lab.stl  newlab.stl
