<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tianracer_navigation_ros2</name>
  <version>0.0.0</version>
  <description>The tianracer_navigation_ros2 package - ROS2 version for Nav2 navigation functionality</description>

  <maintainer email="FAIZ030612@163.com">JeffreySharp</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 core dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <!-- TF2 dependencies -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  
  <!-- Nav2 dependencies (runtime) -->
  <!-- These packages need to be installed via apt -->
  <!-- ros-humble-navigation2, ros-humble-nav2-bringup, etc. -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
