<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tianracer_slam_ros2</name>
  <version>0.0.0</version>
  <description>The tianracer_slam_ros2 package - ROS2 version for SLAM functionality</description>

  <maintainer email="tianbot@todo.todo">tianbot</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 core dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <!-- TF2 dependencies -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  
  <!-- SLAM algorithm dependencies (runtime) -->
  <!-- Note: These packages need to be available in ROS2 -->
  <!-- For gmapping: use slam_toolbox instead -->
  <!-- For cartographer: use cartographer_ros -->
  <!-- For hector: may need to use slam_toolbox or hector_slam if available -->
  
  <!-- Map server for saving maps -->
  <!-- nav2_map_server for ROS2 -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
